simplified setting for Map and List config, as shown in WebClusterDatabaseExample, and tidied tests