@@ -1,15 +1,16 @@
 package brooklyn.demo
 
 import static brooklyn.event.basic.DependentConfiguration.valueWhenAttributeReady
+import static brooklyn.entity.java.JavaEntityMethods.javaSysProp
+import groovy.transform.InheritConstructors
 
 import org.slf4j.Logger
 import org.slf4j.LoggerFactory
 
-import brooklyn.config.BrooklynProperties
 import brooklyn.entity.basic.AbstractApplication
 import brooklyn.entity.basic.Entities
-import brooklyn.entity.java.UsesJava
 import brooklyn.entity.database.mysql.MySqlNode
+import brooklyn.entity.java.UsesJava
 import brooklyn.entity.webapp.ControlledDynamicWebAppCluster
 import brooklyn.entity.webapp.DynamicWebAppCluster
 import brooklyn.launcher.BrooklynLauncher
@@ -20,51 +21,42 @@ import brooklyn.util.CommandLineUtil
 
 /**
  * Launches a 3-tier app with nginx, clustered jboss, and mysql.
- * <p>
- * Requires: 
- * -Xmx512m -Xms128m -XX:MaxPermSize=256m
- * and brooklyn-all jar, and this jar or classes dir, on classpath. 
  **/
+@InheritConstructors
 public class WebClusterDatabaseExample extends AbstractApplication {
+    
     public static final Logger LOG = LoggerFactory.getLogger(WebClusterDatabaseExample)
     
-    static BrooklynProperties config = BrooklynProperties.Factory.newDefault()
-
     public static final String DEFAULT_LOCATION = "localhost"
 
     public static final String WAR_PATH = "classpath://hello-world-sql-webapp.war"
     
+    public static final String DB_SETUP_SQL_URL = "classpath://visitors-creation-script.sql"
+    
     public static final String DB_USERNAME = "brooklyn"
     public static final String DB_PASSWORD = "br00k11n"
     
-    public static final String DB_SETUP_SQL_URL = "classpath://visitors-creation-script.sql"
-    
     public static String makeJdbcUrl(String dbUrl) {
         //jdbc:mysql://192.168.1.2:3306/visitors?user=brooklyn&password=br00k11n
-        "jdbc:"+dbUrl+"visitors"+"?"+
-            "user="+DB_USERNAME+"\\&"+
-            "password="+DB_PASSWORD
+        return "jdbc:"+dbUrl+"visitors"+"?"+"user="+DB_USERNAME+"\\&"+"password="+DB_PASSWORD;
     }
 
-    public WebClusterDatabaseExample(Map props=[:]) {
-        super(props)
-    }
     
     ControlledDynamicWebAppCluster web = new ControlledDynamicWebAppCluster(this, war: WAR_PATH);
     MySqlNode mysql = new MySqlNode(this, creationScriptUrl: DB_SETUP_SQL_URL);
 
     {
-        web.factory.configure(
-            httpPort: "8080+", 
-            (UsesJava.JAVA_SYSPROPS):
-                ["brooklyn.example.db.url": valueWhenAttributeReady(mysql, MySqlNode.MYSQL_URL, this.&makeJdbcUrl)]);
+        web.factory.
+            configure(httpPort: "8080+").
+            configure(javaSysProp("brooklyn.example.db.url"),
+                valueWhenAttributeReady(mysql, MySqlNode.MYSQL_URL, this.&makeJdbcUrl));
 
         web.cluster.addPolicy(AutoScalerPolicy.builder()
                 .metric(DynamicWebAppCluster.AVERAGE_REQUESTS_PER_SECOND)
                 .sizeRange(1, 5)
                 .metricRange(10, 100)
                 .build());
-    }    
+    }
 
     public static void main(String[] argv) {
         WebClusterDatabaseExample app = new WebClusterDatabaseExample(name:'Brooklyn WebApp Cluster with Database example')
